1.2.7 - 28 August 2007
  - license change to Artistic 2.0
  - pointless option "-l" removed

1.2.6 - 4 February 2007
  - bugfix (reversion): removed locking from MySQL as it makes it too slow

1.2.5 - 21 January 2007
  - bugfix: fixed random token deletion in list backend
  - bugfix: added table locking to MySQL backend to maintain integrity
  - bugfix: fixed MySQL database type autodetection for files
  - cleanup: rpmlint fixes to spec file

1.2.1 - 25 October 2006
  - bugfix: concurrent updates now work properly on all backends
  - developers: "make bigbenchmark" generates graph data for gnuplot

1.2.0 - 2 October 2006
  - new default backend database "list" (better than btree)
  - new option "-H" to set value of X-Spam header (Michal Vitecek)
  - new option "-P" to keep a plaintext mapping of hashes to tokens
  - new option "-y" to use a deny-list as well as an allow-list
  - new allow/deny-list syntax "@domain" to list whole domains

1.1.13 - 15 August 2006
  - bugfix: patch from Michal Vitecek to fix segfault in btree backend
  - bugfix: fixed MD5 problem on 64-bit systems (eg AMD64)
  - bugfix: fixed mmap problem with btree on OpenBSD
  - cleanup: better compilation on Solaris
  - cleanup: use snprintf more and strcpy/strcat less
  - cleanup: fixed problems spotted by Tommy Pettersson

1.1.7 - 8 April 2006
  - check Return-Path: header against allow-list as well as From:

1.1.6 - 2 February 2006
  - cosmetic fixes to prevent compilation warnings with GCC 4.x
  - bugfix: improved MySQL detection when running configure script
  - bugfix: if a URL is the first thing in the body it is now still found
  - bugfix: handle message/* nested attachments

1.1.2 - 7 July 2005
  - allow list matching is now case insensitive
  - new btree database mtime is updated after any modification
  - spec file fix for FC4

1.1.0 - 12 May 2005
  - per-user databases are now given 10x the weighting of global databases
  - improved the pruning algorithm to take token "age" into account